xmloff/source/style/xmlbahdl.hxx
@@ -306,8 +306,8 @@ public:
 
 /**
     PropertyHandler for the XML-data-type: XML_TYPE_NUMBER16_AUTO
-    Reads/writes numeric properties with special handling for the value zero
-    (i.e., a value 0 property will be written as "auto")
+    Reads/writes numeric properties with special handling for "void" value
+    (i.e., void property will be written as "auto")
 */
 class XMLNumberWithAutoInsteadZeroPropHdl : public XMLNumberWithoutZeroPropHdl
 {
